ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: comm100integration
  namespace: NAMESPACE
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    
spec:
  tls:
  - hosts:
    - apitest.vincall.net     
    secretName: api.vincall.net 
  - hosts:
    - apivincall.testing.comm100dev.io     
    secretName: testing.comm100dev.io-tls
  rules: 
  - host: apitest.vincall.net
    http:
      paths:
        - path: /open(/|$)(.*)
          backend:
            serviceName: comm100integration
            servicePort: 80
  - host: apivincall.testing.comm100dev.io    
    http:
      paths:
        - path: /open(/|$)(.*)
          backend:
            serviceName: comm100integration
            servicePort: 80
